libs/preprocessor/tests/errors/pe3_expected_ident/stderr.ansi
[0m[1m[38;5;9merror[PE3][0m[1m: expected identifier[0m
  [0m[36m┌─[0m source.hpp:1:8
  [0m[36m│[0m  
[0m[36m1[0m [0m[36m│[0m   #define
  [0m[36m│[0m [0m[31m╭[0m[0m[31m───────^[0m
[0m[36m2[0m [0m[36m│[0m [0m[31m│[0m 
  [0m[36m│[0m [0m[31m╰[0m[0m[31m^ expected identifier, found `\n`[0m

